# OOP_Project

./: .gitignore  CMakeLists.txt  main.cpp
Controller/: InputError.h  InputParser.cpp  InputParser.h
Model/: Capacitor.h  CircuitBuilder.cpp  CircuitBuilder.h  CircuitMatrix.cpp  CircuitMatrix.h  CurrentSource.cpp  CurrentSource.h  Edge.cpp  Edge.h  Inductor.cpp  Inductor.h  Node.cpp  Node.h  Resistor.cpp  Resistor.h  SchematicManager.cpp  SchematicManager.h  VoltageSource.cpp  VoltageSource.h
Model/Elements/: Capacitor.cpp  Capacitor.h  CurrentSource.cpp  CurrentSource.h  Inductor.cpp  Inductor.h  Resistor.cpp  Resistor.h  VoltageSource.cpp  VoltageSource.h
Model/Solvers/: LinearEquationSolver.cpp  LinearEquationSolver.h  TimeSolver.cpp  TimeSolver.h
View/: InputError.cpp
